Comment buger menu color for contrast

--- a/src/styles/components/_menu.scss
+++ b/src/styles/components/_menu.scss
@@ -74,7 +74,7 @@
     &__icon{
         width: $h3-size;
         height: $h3-size;
-        fill: $grey-color-dark;
+        // fill: $grey-color-dark;
     }
 
     &--open &{
